# local-text-search

./: .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt
local_text_search/: __init__.py  chunker.py  cli.py  config.py  embeddings.py  indexer.py  models.py  search.py  storage.py
local_text_search/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
tests/: conftest.py  test_chunker.py  test_config.py  test_indexer.py  test_providers.py  test_search.py
